<resources>
    <string name="app_name">Final Project</string>
    <string name="title">Educational Quiz Counter</string>
    <string name="teamA">Team A</string>
    <string name="teamB">Team B</string>
    <string name="teamC">Team C</string>
    <string name="defaultValue">0</string>
    <string name="increment100">+100</string>
    <string name="increment50">+50</string>
    <string name="decrement50">-50</string>
    <string name="reset">Reset</string>
    <string name="exit">Back</string>
    <string name="title_activity_question">QuestionActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    
    
    <string name="question1"> Berapakah hasil dari 2 + 2 ?</string>
    <string name="Aquestion1"> 2 </string>
    <string name="Bquestion1"> 3 </string>
    <string name="Cquestion1"> 4 </string>

    <string name="question2"> Berapakah hasil dari 5 + 2 ?</string>
    <string name="Aquestion2"> 8 </string>
    <string name="Bquestion2"> 7 </string>
    <string name="Cquestion2"> 10 </string>

    <string name="question3"> Berapakah hasil dari 2 + 7 ?</string>
    <string name="Aquestion3"> 4 </string>
    <string name="Bquestion3"> 5 </string>
    <string name="Cquestion3"> 9 </string>
</resources>
